# edge-ai-gateway

./: BH1759遇到的问题以及解决办法.docx  Edge AI Agent Gateway 设计文档 v3.docx  MQTT.docx  README.md  dht11模块遇到的问题及解决办法.docx  gen_doc.py  github操作.docx  pms5003.docx  w25q32模块.docx  启动边缘网关.bat  快速上手.md  操作文档.md  设备树修改操作.docx  设备树备份.txt
agent/: agent_core.py  config.yaml  main.py  mqtt_bridge.py  requirements.txt
agent/memory/: context_store.py
agent/tools/: __init__.py  automation_tools.py  weather_tools.py
agent/web/: dashboard.py
agent/web/templates/: index.html
config/: mqtt_broker.conf
config/systemd/: edge-agent.service
embedded/: CMakeLists.txt  Makefile  edge_gateway
embedded/dts/: imx6ull-alientek-emmc.dts
embedded/include/: config.h  logging.h  protocol.h
embedded/include/actuator/: device_manager.h  fan_pwm.h  ir_control.h  led_control.h  relay_control.h
embedded/include/sensor/: bh1750.h  pms5003.h  sensor_manager.h  w25q32.h
embedded/include/tools/: tool_handlers.h
embedded/src/: main.c
embedded/src/actuator/: device_manager.c  fan_pwm.c  gpio_util.c  ir_control.c  led_control.c  relay_control.c
embedded/src/comm/: mqtt_ringbuf.c
embedded/src/sensor/: bh1750.c  gp2y1014au.c  pms5003.c  sensor_manager.c  w25q32.c
embedded/src/tools/: tool_dispatcher.c  tool_handlers.c
embedded_backup_libgpiod/: CMakeLists.txt  Makefile
embedded_backup_libgpiod/include/: config.h
embedded_backup_libgpiod/include/actuator/: device_manager.h  gpio_util.h  ir_control.h
embedded_backup_libgpiod/include/comm/: mqtt_client.h  mqtt_ringbuf.h
embedded_backup_libgpiod/include/sensor/: dht11.h  sensor_manager.h  status_led.h
embedded_backup_libgpiod/include/storage/: sqlite_storage.h
embedded_backup_libgpiod/include/tools/: tool_dispatcher.h  tool_handlers.h
embedded_backup_libgpiod/src/: logging.c  main.c
embedded_backup_libgpiod/src/actuator/: device_manager.c  gpio_util.c  ir_control.c  relay_control.c
embedded_backup_libgpiod/src/comm/: mqtt_client.c
embedded_backup_libgpiod/src/sensor/: dht11.c  pms5003.c  sensor_manager.c  status_led.c
embedded_backup_libgpiod/src/storage/: sqlite_storage.c
embedded_backup_libgpiod/src/tools/: tool_dispatcher.c  tool_handlers.c
embedded_backup_sysfs/: BH1750.c  CMakeLists.txt  Makefile
embedded_backup_sysfs/include/: config.h  logging.h
embedded_backup_sysfs/include/actuator/: device_manager.h  gpio_util.h  relay_control.h
embedded_backup_sysfs/include/comm/: mqtt_client.h  mqtt_ringbuf.h
embedded_backup_sysfs/include/sensor/: bh1750.h  dht11.h  pms5003.h  sensor_manager.h  status_led.h  w25q32.h
embedded_backup_sysfs/include/storage/: sqlite_storage.h
embedded_backup_sysfs/include/tools/: tool_dispatcher.h  tool_handlers.h
embedded_backup_sysfs/lib/: sqlite3.c
embedded_backup_sysfs/src/: logging.c  main.c
embedded_backup_sysfs/src/actuator/: device_manager.c  relay_control.c
embedded_backup_sysfs/src/comm/: mqtt_client.c  mqtt_ringbuf.c
embedded_backup_sysfs/src/sensor/: bh1750.c  dht11.c  pms5003.c  sensor_manager.c  status_led.c  w25q32.c
embedded_backup_sysfs/src/storage/: sqlite_storage.c
embedded_backup_sysfs/src/tools/: tool_dispatcher.c  tool_handlers.c
gp2y1014au_backup/include/sensor/: gp2y1014au.h
gp2y1014au_backup/src/sensor/: gp2y1014au.c
tests/: test_mqtt.py  test_tools.py
